--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <div class="centered-main-page-element">
     <p id="topSectionForAddingElementToList">
       <label for="new-task">Add Item</label>
-      <div class="task-row-wrapper"><input id="new-task" class="task" type="text">
+      <div class="task-row-wrapper">
+        <input id="new-task" class="task" type="text">
         <button>Add</button>
       </div>
     </p>
