--- a/index.html
+++ b/index.html
@@ -7,49 +7,49 @@
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
 
-<body>
+<body class="main-container">
   <div class="decision-matrix">
-    <img src="./eisenhower-matrix.jpg">
+    <img class="matrix-image" src="./eisenhower-matrix.jpg">
     <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </div>
   <div class="centered-main-page-element">
     <p id="topSectionForAddingElementToList">
-      <label for="new-task">Add Item</label>
+      <label class="add-item-label" for="new-task">Add Item</label>
       <div class="task-row-wrapper">
-        <input id="new-task" class="task" type="text">
-        <button>Add</button>
+        <input id="new-task" class="add-item-input task-list-input-text task" type="text">
+        <button class="button-control button-add">Add</button>
       </div>
     </p>
-    <h3>Todo</h3>
-    <ul id="incompleteTasks">
-      <li>
-        <input type="checkbox">
-        <label class="task">Pay Bills</label>
-        <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete">
-          <img src="./remove.svg">
+    <h3 class="section-heading">Todo</h3>
+    <ul id="incomplete-tasks">
+      <li class="task-list-item">
+        <input type="checkbox" class="task-list-input-checkbox">
+        <label class="task-list-label task">Pay Bills</label>
+        <input type="text" class="task-list-input-text task">
+        <button class="button-control button-edit">Edit</button>
+        <button class="button-control button-delete">
+          <img class="button-delete-image" src="./remove.svg">
         </button>
       </li>
-      <li class="edit-mode">
-        <input type="checkbox">
-        <label class="task">Go Shopping</label>
-        <input type="text" value="Go Shopping" class="task">
-        <button class="edit">Save</button>
-        <button class="delete">
-          <img src="./remove.svg">
+      <li class="task-list-item edit-mode">
+        <input type="checkbox" class="task-list-input-checkbox">
+        <label class="task-list-label task">Go Shopping</label>
+        <input type="text" value="Go Shopping" class="task-list-input-text task">
+        <button class="button-control button-edit">Save</button>
+        <button class="button-control button-delete">
+          <img class="button-delete-image" src="./remove.svg">
         </button>
       </li>
     </ul>
-    <h3>Completed</h3>
+    <h3 class="section-heading">Completed</h3>
     <ul id="completed-tasks">
-      <li>
-        <input type="checkbox" checked>
-        <label class="task">See the Doctor</label>
-        <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete">
-          <img src="./remove.svg">
+      <li class="task-list-item">
+        <input type="checkbox" class="task-list-input-checkbox" checked>
+        <label class="task-list-label task">See the Doctor</label>
+        <input type="text" class="task-list-input-text task">
+        <button class="button-control button-edit">Edit</button>
+        <button class="button-control button-delete">
+          <img class="button-delete-image" src="./remove.svg">
         </button>
       </li>
     </ul>
