--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 
 <body class="main-container">
-  <div class="decision-matrix">
+  <section class="decision-matrix">
     <img class="matrix-image" src="./eisenhower-matrix.jpg">
     <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-  </div>
-  <div class="centered-main-page-element">
+  </section>
+  <section class="centered-main-page-element">
     <p id="top-section-for-adding-element-to-list">
       <label class="add-item-label" for="new-task">Add Item</label>
       <div class="task-row-wrapper">
@@ -53,7 +53,7 @@
         </button>
       </li>
     </ul>
-  </div>
+  </section>
   <script src="app.js"></script>
 </body>
 
