rix: add alts to images  according to rule 1.2 in html-and-css-extended.md

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body class="main-container">
   <section class="decision-matrix">
-    <img class="matrix-image" src="./eisenhower-matrix.jpg">
+    <img class="matrix-image" src="./eisenhower-matrix.jpg" alt="Eisenhower Matrix">
     <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </section>
   <section class="centered-main-page-element">
@@ -28,7 +28,7 @@
         <input type="text" class="task-list-input-text task">
         <button class="button-control button-edit">Edit</button>
         <button class="button-control button-delete">
-          <img class="button-delete-image" src="./remove.svg">
+          <img class="button-delete-image" src="./remove.svg" alt="Remove Image">
         </button>
       </li>
       <li class="task-list-item edit-mode">
@@ -37,7 +37,7 @@
         <input type="text" value="Go Shopping" class="task-list-input-text task">
         <button class="button-control button-edit">Save</button>
         <button class="button-control button-delete">
-          <img class="button-delete-image" src="./remove.svg">
+          <img class="button-delete-image" src="./remove.svg" alt="Remove Image">
         </button>
       </li>
     </ul>
@@ -49,7 +49,7 @@
         <input type="text" class="task-list-input-text task">
         <button class="button-control button-edit">Edit</button>
         <button class="button-control button-delete">
-          <img class="button-delete-image" src="./remove.svg">
+          <img class="button-delete-image" src="./remove.svg" alt="Remove Image">
         </button>
       </li>
     </ul>
