fix: replace id selectors from css  according to rule 2.1 in html-and-css-extended.md

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </li>
     </ul>
     <h3 class="section-heading">Completed</h3>
-    <ul id="completed-tasks">
+    <ul id="completed-tasks" class="completed-tasks-container">
       <li class="task-list-item">
         <input type="checkbox" class="task-list-input-checkbox" checked>
         <label class="task-list-label task">See the Doctor</label>
