refactor: replace p with div according to rule 1.1 in html-and-css-extended.md

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </section>
   <section class="centered-main-page-element">
-    <p id="top-section-for-adding-element-to-list">
+    <div id="top-section-for-adding-element-to-list">
       <label class="add-item-label" for="new-task">Add Item</label>
       <div class="task-row-wrapper">
         <input id="new-task" class="add-item-input task-list-input-text task" type="text">
         <button class="button-control button-add">Add</button>
       </div>
-    </p>
+    </div>
     <h3 class="section-heading">Todo</h3>
     <ul id="incomplete-tasks">
       <li class="task-list-item">
