--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <img class="matrix-image" src="./eisenhower-matrix.jpg" alt="Eisenhower Matrix">
     <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
-  <main class="centered-main-page-element">
-    <section id="top-section-for-adding-element-to-list">
+  <main class="main-wrapper">
+    <section>
       <label class="add-item-label" for="new-task">Add Item</label>
       <div class="task-row-wrapper">
         <input id="new-task" class="add-item-input task-list-input-text task" type="text">
